# PartRank

./: README.md
src/backend/: main.py  pyproject.toml  requirements.txt
src/backend/app/: auth.py  crud.py  database.py  main.py  models.py  partrank.db  schemas.py
src/backend/clean_gpu/: cleandata.py  cleandata2.py  savedata.py  upload_clean_data.py
src/backend/data/: gpu_data.json  gpu_data_cleaned.json  gpu_data_cleaned_3.json  gpu_data_cleaned_4.json  gpu_data_cleaned_5_candidate.json  gpu_data_cleaned_6_priced.json
src/backend/migrations/: env.py
src/backend/migrations/versions/: f46e5e48ae2e_users_update.py
src/backend/tests/: new.py  scrape.py  test.py
src/frontend/src/: App.css  App.jsx
