[project]
name = "partrank-backend"
version = "1"
description = "rank parts"
authors = [
    {name = "SuryaThirukonda",email = "93106511+SuryaThirukonda@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "datetime (>=6.0,<7.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
